# pisa

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  ABOUT.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  all_ones_sequence.hpp  appveyor.yml  binary_collection.hpp  binary_freq_collection.hpp  bitvector_collection.hpp  block_codecs.hpp  block_freq_index.hpp  bm25.hpp  bump.json  clang.cmake  cli.hpp  compact_elias_fano.hpp  compact_ranked_bitvector.hpp  configuration.hpp  create_freq_index.cpp  create_wand_data.cpp  dec_time_prediction.hpp  dec_time_regression.py  ds2i_config.hpp.in  freq_index.hpp  global_parameters.hpp  index_build_utils.hpp  index_types.hpp  integer_codes.hpp  l1l1.py  mixed_block.hpp  (+17 more)
benchmarks/: CMakeLists.txt  bench_cursors.cpp  benchmarks.py  drop_caches.c  index_perftest.cpp  next_geq.cpp  perftest_decoding.cpp  perftest_interpolative.cpp  scan_perftest.cpp  selective_queries.cpp  traversal.cpp
pisactl/: README.md  pyproject.toml  pyrightconfig.json
pisactl/tests/: test_index.py  test_metadata.py  test_scorer.py
src/: CMakeLists.txt  binary_collection.cpp  binary_freq_collection.cpp  bit_vector.cpp  bit_vector_builder.cpp  block_freq_index.cpp  block_inverted_index.cpp  block_posting_list.cpp  cli.hpp  compress.cpp  compute_intersection.cpp  count_postings.cpp  cow_string.cpp  create_freq_index.cpp  create_intersections.cpp  create_wand_data.cpp  evaluate_block_error.cpp  evaluate_collection_ordering.cpp  evaluate_queries.cpp  extract_taily_stats.cpp  extract_topics.cpp  forward_index_builder.cpp  index_stats_json.cpp  invert.cpp  io.cpp  kmeans_reordering.cpp  kth_score.cpp  lexicon.cpp  linear_quantizer.cpp  lookup_table.cpp  map_queries.cpp  memory_source.cpp  optimal_hybrid_index.cpp  parse_collection.cpp  parser.cpp  partition_fwd_index.cpp  profile_decoding.cpp  profile_queries.cpp  progress.cpp  queries.cpp  (+19 more)
src/accumulator/: lazy_accumulator.cpp  simple_accumulator.cpp
src/codec/: block_codec_registry.cpp  interpolative.cpp  maskedvbyte.cpp  optpfor.cpp  qmx.cpp  simdbp.cpp  simple16.cpp  simple8b.cpp  streamvbyte.cpp  varint_g8iu.cpp  varintgb.cpp
src/cursor/: block_max_scored_cursor.cpp  cursor.cpp  max_scored_cursor.cpp  scored_cursor.cpp
src/parsing/: html.cpp
src/pisa/: CMakeLists.txt  block_freq_index.cpp  cursors.cpp  index_types.cpp  payload_vector.cpp  tokenizer.cpp
src/query/: parser.cpp  queries.cpp  query_parser.cpp  term_processor.cpp  term_resolver.cpp
src/scorer/: bm25.cpp  dph.cpp  pl2.cpp  qld.cpp
src/util/: json_stats.cpp  stats_builder.cpp
src/v1/: bit_sequence_cursor.cpp  blocked_cursor.cpp  default_index_runner.cpp  index.cpp  index_builder.cpp  index_metadata.cpp  intersection.cpp  io.cpp  progress_status.cpp  query.cpp  raw_cursor.cpp  score_index.cpp
test/: CMakeLists.txt  in_memory_index.cpp  in_memory_index.hpp  temporary_directory.hpp  test_algorithm.cpp  test_binary_index.cpp  test_bit_vector.cpp  test_block_codec.cpp  test_block_codecs.cpp  test_block_freq_index.cpp  test_block_posting_list.cpp  test_bmw_queries.cpp  test_common.hpp  test_compact_elias_fano.cpp  test_compact_ranked_bitvector.cpp  test_compress.cpp  test_cow_string.cpp  test_cursor_intersection.cpp  test_cursor_union.cpp  test_cursors.cpp  test_forward_index.cpp  test_forward_index_builder.cpp  test_freq_index.cpp  test_generic_sequence.hpp  test_html.cpp  test_index_types.cpp  test_indexed_sequence.cpp  test_intersection.cpp  test_intersection_collection.cpp  test_intersection_query.cpp  test_invert.cpp  test_json_stats.cpp  test_lexicon.cpp  test_linear_quantizer.cpp  test_live_block_computation.cpp  test_lookup_table.cpp  test_mapper.cpp  test_maxscore_inter_query.cpp  test_memory.cpp  test_memory_source.cpp  (+40 more)
test/cli/: common.sh  run.sh  setup.sh  test_compute_intersection.sh  test_count_postings.sh  test_evaluate_queries.sh  test_filter_queries.sh  test_lookup_table.sh  test_taily_stats.sh  test_wand_data.sh
test/command/: test_command_invert.cpp
test/docker/: cmake-3.25.2-SHA-256.txt  install-clang.sh  install-cmake.sh
test/program/: CMakeLists.txt  test_program_invert.cpp
test/test_data/: bp-node-config.txt  clueweb1k.documents  clueweb1k.plaintext  clueweb1k.shard.00  clueweb1k.shard.01  clueweb1k.shard.02  clueweb1k.shard.03  queries  queries.jl  queries.selections.jl  test_collection.sizes  top10_selections  top10_selections_unigram  top10_thresholds  top5_thresholds
test/v1/: CMakeLists.txt  index_fixture.hpp  test_union_lookup_join.cpp  test_v1.cpp  test_v1_bigram_index.cpp  test_v1_blocked_cursor.cpp  test_v1_document_payload_cursor.cpp  test_v1_index.cpp  test_v1_maxscore_join.cpp  test_v1_queries.cpp  test_v1_query.cpp  test_v1_score_index.cpp  test_v1_union_lookup.cpp
tools/: CMakeLists.txt  app.cpp  app.hpp  awesome_queries.cpp  bench_on_the_fly.cpp  bench_range_block_max.cpp  build_binary_index.cpp  compress_inverted_index.cpp  compute_intersection.cpp  count_lists.cpp  count_postings.cpp  create_freq_index.cpp  create_freq_index.hpp  create_wand_data.cpp  create_wand_data.hpp  document_viewer.cpp  evaluate_collection_ordering.cpp  evaluate_inter_queries.cpp  evaluate_queries.cpp  extract_maxscores.cpp  extract_topics.cpp  filter_queries.cpp  invert.cpp  kth_threshold.cpp  kth_thresholds.cpp  lexicon.cpp  lookup_table.cpp  map_queries.cpp  optimal_hybrid_index.cpp  parse_collection.cpp  partition_fwd_index.cpp  profile_decoding.cpp  profile_queries.cpp  profile_queries_dynamic.cpp  queries.cpp  queries_dynamic.cpp  queries_extract.cpp  queries_perftest.cpp  range_queries.cpp  read_collection.cpp  (+18 more)
tools/evaluate_queries/: bm_wands.cpp  def.hpp  ranked.cpp  taat.cpp  wands.cpp
tools/queries/: bm_wands.cpp  boolean.cpp  def.hpp  ranked.cpp  taat.cpp  (+1 more)
v1/: CMakeLists.txt  app.hpp  bigram_index.cpp  bmscore.cpp  compress.cpp  count_postings.cpp  filter_queries.cpp  id_to_term.cpp  intersection.cpp  postings.cpp  query.cpp  score.cpp  select_pairs.cpp  stats.cpp  term_to_id.cpp  threshold.cpp  union_lookup.cpp
(+611 files in other folders)
